--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "react": "^17.0.1",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-tree-graph": "^5.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
