--- a/web/package.json
+++ b/web/package.json
@@ -8,18 +8,15 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@naisutech/react-tree": "^0.4.2",
-    "@projectstorm/react-diagrams": "^6.3.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "@visx/visx": "^1.3.0",
     "axios": "^0.21.0",
-    "beautiful-react-diagrams": "^0.5.1",
+    "eslint": "^7.15.0",
     "react": "^17.0.1",
-    "react-d3-tree": "^1.16.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "react-tree-graph": "^5.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -46,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "prettier": "^2.2.1"
   }
 }
