--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,6 @@
     "@testing-library/user-event": "^12.6.0",
     "@visx/visx": "^1.3.0",
     "axios": "^0.21.0",
-    "eslint": "^7.15.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -45,8 +44,10 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
     "prettier": "^2.2.1"
   }
 }
